2004-08-10  Daniel Jacobowitz  <dan@debian.org>

	* elf.c (assign_file_positions_except_relocs): Revert unintended
	change from 2004-04-08.

2004-05-28  Jason Thorpe  <thorpej@wasabisystems.com>

	* config.bfd (hppa*-*-netbsd*): Set targ_defvec to
	bfd_elf32_hppa_nbsd_vec.  Add bfd_elf32_hppa_linux_vec
	to targ_selvecs.
	* configure.in (bfd_elf32_hppa_nbsd_vec): Add case.
	* configure: Regenerate.
	* elf32-hppa.c (elf32_hppa_object_p): Add "elf32-hppa-netbsd"
	case that accepts OSABI=NetBSD and OSABI=SysV.
	(elf32_hppa_set_gp): For "elf32-hppa-netbsd", set the GP to
	the base of .got or .data (if .got does not exist).
	(elf32_hppa_post_process_headers): For elf32-hppa-netbsd,
	set OSABI=NetBSD.
	(TARGET_BIG_SYM): Add bfd_elf32_hppa_nbsd_vec case.
	(TARGET_BIG_NAME): Add "elf32-hppa-netbsd" case.
	* targets.c (bfd_elf32_hppa_nbsd_vec): Add extern declaration.
	(_bfd_target_vector): Add bfd_elf32_hppa_nbsd_vec.

2004-05-17  Daniel Jacobowitz  <dan@debian.org>

	* configure.in: Mark unreleased for post-2.15 snapshots.
	* configure: Regenerate.

2004-05-17  Daniel Jacobowitz  <dan@debian.org>

	* configure.in: Bump version to 2.15.  Mark as released.
	* configure: Regenerate.

2004-05-13  Joel Sherrill <joel@oarcorp.com>

	* config.bfd (or32-*-rtems*): Switch to elf.

2004-05-13  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2004-05-07  Daniel Jacobowitz  <dan@debian.org>

	* configure.in: Bump version to 2.14.92.
	* configure: Regenerate.

2004-05-07  Daniel Jacobowitz  <dan@debian.org>

	Merge from mainline:
	2004-04-16  Alan Modra  <amodra@bigpond.net.au>
	* simple.c (bfd_simple_get_relocated_section_contents): Don't
	change reloc_done.  Set and restore _cooked_size.
	(RETURN): Delete.

2004-05-07  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-frv.c (elf32_frvfdpic_modify_segment_map): Return
	immediately if there's no link info.
	(elf32_frvfdpic_copy_private_bfd_data): New.
	(bfd_elf32_bfd_copy_private_bfd_data): Use it for frvfdpic.
