@@ -1,3 +1,13 @@
+2004-09-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Merge from mainline:
+	2004-08-31  Eric Botcazou  <ebotcazou@libertysurf.fr>
+	* elf.c (special_sections): Add .gnu.linkonce.b modelled on .bss.
+
+	2004-06-09  Alexandre Oliva  <aoliva@redhat.com>
+	* elflink.c (elf_sort_symbol): Compare section id, not pointers.
+	(elf_link_add_object_symbols): Likewise.
+
 2004-08-10  Daniel Jacobowitz  <dan@debian.org>
 
 	* elf.c (assign_file_positions_except_relocs): Revert unintended
